# unirun

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  NOTES.md  README.md
plugins/applications/: Cargo.toml
plugins/applications/src/: app_info.rs  main.rs
unirun/: Cargo.toml
unirun-interface/: Cargo.toml
unirun-interface/src/: lib.rs  package.rs
unirun/src/: gui.rs  main.rs  utils.rs
unirun/src/types/: ghit.rs  gmatch.rs  mod.rs
