[package]
name = "unirun-plugin-applications"
version = "0.1.4-alpha"
edition = "2021"

[dependencies]
unirun-if = { path = "../../unirun-interface", package = "unirun-interface" }
glib = { workspace = true }
gio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
